--- a/nav-demo/style.css
+++ b/nav-demo/style.css
@@ -56,7 +56,7 @@ main {
     justify-content: center;
     align-items: center;
     display: flex;
-    height: 90vh;
+    height: 100vh;
 }
 
 #main {
@@ -103,15 +103,55 @@ main {
     bottom: 2px;
 }
 
+#head {
+    position: fixed;
+    width: 100%;
+    top: 0px;
+}
+
 #foot {
     text-align: center;
-    display: block;
-    height: 10vh;
+    position: fixed;
+    width: 100%;
+    bottom: 0px;
 }
 
 #foot>.copyright {
-    background-color: #111111;
+    background-color: rgba(0, 0, 0, 0.6);
     color: #fff;
-    font-size: 36px;
+    font-size: 32px;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 5px;
+}
+
+#head {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-size: 32px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.clear {
+    clear: both;
+}
+
+.left {
+    float: left;
+    padding: 5px 20px;
+}
+
+.right>input {
+    border: 1px solid #fff;
+    border-radius: 2px;
+    background-color: transparent;
+}
+
+.right>input:focus {
+    border: 1px solid #fff;
+    border-radius: 2px;
+}
+
+.right {
+    float: right;
+    padding: 0 20px;
 }
