--- a/canvas/style.css
+++ b/canvas/style.css
@@ -1,14 +1,124 @@
-#xxx {
-    background: green;
+#canvas {
+    background: #ffffff;
     display: block;
 }
 
 body {
-    margin: 0px;
+    margin: 0;
+    overflow: hidden;
 }
 
 button {
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    border: 0px;
+    cursor: pointer;
+}
+
+.eraser {
+    background: url(eraser.png) center center;
+    background-size: cover;
+}
+
+.brush {
+    background: url(pen.png) center center;
+    background-size: cover;
+}
+
+ul,
+ol,
+li {
+    list-style: none;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+.clear {
+    clear: both;
+}
+
+ul {
+    position: fixed;
     top: 0px;
-    left: 0px;
+    left: 60px;
+}
+
+ol {
+    position: fixed;
+    top: 40px;
+    left: 5px;
+}
+
+ol>li {
+    width: 40px;
+    margin: 20px 10PX;
+    display: block;
+    cursor: pointer;
+}
+
+ol>#line1 {
+    border: 1px solid black;
+}
+
+ol>#line2 {
+    border: 3px solid black;
+}
+
+ol>#line3 {
+    border: 5px solid black;
+}
+
+ul>li {
+    float: left;
+    width: 20px;
+    height: 20px;
+    border: 2px solid black;
+    border-radius: 50%;
+    margin: 10px 10px;
+    cursor: pointer;
+}
+
+#clearscreen,
+#download {
+    width: 20px;
+    height: 20px;
+    border: 0px;
+}
+
+#clearscreen {
+    height: 20px;
+    background: url(clear.png) center center;
+    background-size: cover;
+}
+
+#download {
+    background: url(download.png) center center;
+    background-size: cover;
+}
+
+ul>li:active {
+    transform: scale(1.2);
+}
+
+#red {
+    background-color: red;
+}
+
+#green {
+    background-color: green;
+}
+
+#blue {
+    background-color: blue;
+}
+
+#black {
+    background-color: black;
 }
